--- a/index.html
+++ b/index.html
@@ -2,88 +2,18 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Chat Widget</title>
-  <style>
-    #chat-widget {
-      border: 1px solid #ccc;
-      padding: 10px;
-      width: 300px;
-      position: fixed;
-      bottom: 0;
-      right: 0;
-      background-color: white;
+  <title>Super Sales Chat Widget</title>
+  <script>
+    window.ChatWidgetConfig = {
+      API_URL: "https://loving-massive-bull.ngrok-free.app",
+      TEAM_ID: "11",
     }
-    #chat-box {
-      height: 200px;
-      overflow-y: auto;
-      border: 1px solid #ccc;
-      padding: 5px;
-    }
-    #user-input {
-      width: 100%;
-      height: 40px;
-    }
-  </style>
+  </script>
+  <script src="./super-sales-smartbuy-chatbot-bundle.js"></script>
+
 </head>
 <body>
-<div id="chat-widget">
-  <div id="chat-box"></div>
-  <textarea id="user-input" placeholder="Type your message here..."></textarea>
-  <button onclick="sendMessage()">Send</button>
-</div>
-
-<script>
-  let userId = null; // Store userId for the session
-
-  // Fetch or create a new user when the chat is initiated
-  async function fetchOrCreateUser() {
-    try {
-      const response = await fetch('https://loving-massive-bull.ngrok-free.app/start-chat', {
-        method: 'POST',
-        headers: {
-          'Content-Type': 'application/json'
-        }
-      });
-
-      const data = await response.json();
-      userId = data.userId; // Save the user ID in this session
-    } catch (error) {
-      console.error('Error starting chat:', error);
-    }
-  }
-
-  // Send message to backend
-  async function sendMessage() {
-    if (!userId) {
-      await fetchOrCreateUser(); // Ensure user is created before sending a message
-    }
-
-    const message = document.getElementById('user-input').value;
-    fetch('https://loving-massive-bull.ngrok-free.app/send-chat', {
-      method: 'POST',
-      headers: {
-        'Content-Type': 'application/json'
-      },
-      body: JSON.stringify({ message, userId })
-    }).then(response => response.json())
-            .then(data => {
-              document.getElementById('user-input').value = '';
-              displayMessage('You: ' + message);
-            }).catch(error => {
-      console.error('Error:', error);
-    });
-  }
-
-  function displayMessage(message) {
-    const chatBox = document.getElementById('chat-box');
-    const newMessage = document.createElement('div');
-    newMessage.textContent = message;
-    chatBox.appendChild(newMessage);
-  }
-
-  // Automatically create a user when the widget loads
-  window.onload = fetchOrCreateUser;
-</script>
+<noscript>You need to enable JavaScript to run this app.</noscript>
+<div id="root"></div>
 </body>
 </html>
