--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Super Sales Chat Widget</title>
   <script>
     window.ChatWidgetConfig = {
-      API_URL: "https://loving-massive-bull.ngrok-free.app",
+      API_URL: "https://super-sales-api-smart-buy-jk7idose7a-uc.a.run.app",
       TEAM_ID: "11",
     }
   </script>
