--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     window.ChatWidgetConfig = {
       API_URL: "https://super-sales-api-smart-buy-jk7idose7a-uc.a.run.app",
       TEAM_ID: "11",
+      ENV: "dev"
     }
   </script>
   <script src="./super-sales-smartbuy-chatbot-bundle.js"></script>
