Dynamic store domain sending on each message, bot name changing dynamically

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     window.ChatWidgetConfig = {
       API_URL: "https://super-sales-api-smart-buy-jk7idose7a-uc.a.run.app",
       TEAM_ID: "11",
-      ENV: "dev"
+      ENV: "dev",
+      BOT_NAME: "SmartBuy Bot"
     }
   </script>
   <script src="./super-sales-smartbuy-chatbot-bundle.js"></script>
