add smart buy colors

--- a/index.html
+++ b/index.html
@@ -8,7 +8,17 @@
       API_URL: "https://super-sales-api-smart-buy-jk7idose7a-uc.a.run.app",
       TEAM_ID: "11",
       ENV: "dev",
-      BOT_NAME: "SmartBuy Bot"
+      BOT_NAME: "SmartBuy Bot",
+      THEME_SETTINGS: {
+        backgroundColor: 'rgb(255, 221, 0)',
+        textColor: '#000000',
+        secondaryTextColor: "#000000",
+        headerText: "Our virtual assistant is here to help you.",
+        welcomeMessage: undefined,
+        textFont: "fantasy",
+        botAvatar: undefined
+      }
+
     }
   </script>
   <script src="./super-sales-smartbuy-chatbot-bundle.js"></script>
