change smart buy team id

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <script>
     window.ChatWidgetConfig = {
       API_URL: "https://super-sales-api-smart-buy-jk7idose7a-uc.a.run.app",
-      TEAM_ID: "11",
+      TEAM_ID: "d9c6c9-2.myshopify.com",
       ENV: "dev",
       BOT_NAME: "SmartBuy Bot",
       THEME_SETTINGS: {
