edit default robot avatar link

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 headerText: "Our virtual assistant is here to help you.",
                 welcomeMessage: undefined,
                 textFont: "fantasy",
-                botAvatar: "https://github.com/urbullet/super-sales-demo/blob/main/assets/robot.png"
+                botAvatar: "https://raw.githubusercontent.com/urbullet/super-sales-demo/refs/heads/main/assets/robot.png"
             }
 
         }
