--- a/mattermost.html
+++ b/mattermost.html
@@ -42,7 +42,8 @@
             const response = await fetch('https://loving-massive-bull.ngrok-free.app/start-chat', {
                 method: 'POST',
                 headers: {
-                    'Content-Type': 'application/json'
+                    'Content-Type': 'application/json',
+                    "ngrok-skip-browser-warning": "true",
                 }
             });
 
@@ -63,7 +64,8 @@
         fetch('https://loving-massive-bull.ngrok-free.app/send-chat', {
             method: 'POST',
             headers: {
-                'Content-Type': 'application/json'
+                'Content-Type': 'application/json',
+                "ngrok-skip-browser-warning": "true",
             },
             body: JSON.stringify({ message, userId })
         }).then(response => response.json())
